--- a/oooo/mohaq.html
+++ b/oooo/mohaq.html
@@ -9,7 +9,7 @@
     <div class="all1">
         <div class="header">
             <div class="navbar">
-                <a href="../sirs.html">home</a>
+                <a href="../index.html">home</a>
                 <a href="../sens.html">blog</a>
                 <a href="../Ass 1.1.html">about</a>
             </div>
